--- a/wp-content/themes/theme-the-boyzs/partials/_base.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_base.scss
@@ -1,17 +1,18 @@
 @use "variables";
 
-*{
+* {
   box-sizing: border-box;
 }
 
-.posfix{
+.posfix {
   position: fixed;
   z-index: 8;
 }
 
-html{
-  scrollbar-width: thin; /* Makes the scrollbar thinner */
-  scrollbar-color: #5a0505 #f37272; 
+html {
+  scrollbar-width: thin;
+  /* Makes the scrollbar thinner */
+  scrollbar-color: #5a0505 #f37272;
 }
 
 body {
@@ -38,10 +39,12 @@ button {
   */
 
   cursor: pointer;
-  -webkit-transition-duration: 0.4s; /* Safari */
+  -webkit-transition-duration: 0.4s;
+  /* Safari */
   transition-duration: 0.4s;
   text-decoration: none;
-  &:active:after{
+
+  &:active:after {
     padding: 0;
     margin: 0;
     opacity: 1;
@@ -50,22 +53,29 @@ button {
 }
 
 ::-webkit-scrollbar {
-  width: 12px; /* Width of the scrollbar */
+  width: 12px;
+  /* Width of the scrollbar */
 }
 
 ::-webkit-scrollbar-track {
-  background: #f4f4f4; /* Background of the scrollbar track */
-  border-radius: 10px; /* Rounded corners */
+  background: #f4f4f4;
+  /* Background of the scrollbar track */
+  border-radius: 10px;
+  /* Rounded corners */
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888; /* Color of the scrollbar thumb */
-  border-radius: 10px; /* Rounded corners */
-  border: 3px solid #f4f4f4; /* Creates padding between the thumb and the track */
+  background: #888;
+  /* Color of the scrollbar thumb */
+  border-radius: 10px;
+  /* Rounded corners */
+  border: 3px solid #f4f4f4;
+  /* Creates padding between the thumb and the track */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Darker shade when hovered */
+  background: #555;
+  /* Darker shade when hovered */
 }
 
 
@@ -101,5 +111,3 @@ section:not([name="carrousel"], [name="swiper"]) {
   margin: auto;
   padding: 40px;
 }
-
-
