--- a/wp-content/themes/theme-the-boyzs/partials/_base.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_base.scss
@@ -11,7 +11,7 @@
 
 html{
   scrollbar-width: large; /* Makes the scrollbar thinner */
-  scrollbar-color: #5a0505 #f37272; /* Thumb color and track color *
+  scrollbar-color: #5a0505 #f37272; /* Thumb color and track color */
 }
 
 body {
