--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -9,9 +9,8 @@
 }
 
 html {
-  scrollbar-width: thin;
-  /* Makes the scrollbar thinner */
-  scrollbar-color: #5a0505 #f37272;
+  scrollbar-width: large; /* Makes the scrollbar thinner */
+  scrollbar-color: #5a0505 #f37272; /* Thumb color and track color */
 }
 
 body {
