--- a/wp-content/themes/theme-the-boyzs/partials/_base.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_base.scss
@@ -105,7 +105,7 @@ section hr {
 }
 
 // PL: ce style s'applique juste aux autres section excepté le carrousel
-section:not([name="carrousel"], [name="swiper"]) {
+section:not([name="carrousel"], [name="swiper"],[name="formulaire"]) {
   max-width: 1900px;
   margin: auto;
   padding: 40px;
