--- a/wp-content/themes/theme-the-boyzs/partials/_contact.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_contact.scss
@@ -22,20 +22,27 @@
     text-align: center;
 }
 
+
 .formulaire {
-    padding: 0 !important;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    padding-bottom: 30px;
     ;
     width: 100vw;
+    
     max-width: 100%;
     background-color: variables.$lightdark;
 
     .titre {
         color: variables.$white;
-        text-align: center;
+        
     }
 
     .label-form {
         color: variables.$white;
         margin-left: 10px;
     }
+    
 }
