--- a/wp-content/themes/theme-the-boyzs/style.css
+++ b/wp-content/themes/theme-the-boyzs/style.css
@@ -1703,6 +1703,8 @@ p {
 }
 .formulaire .titre {
   color: #fdfdff;
+  margin-top: 25px;
+  margin-bottom: 30px;
 }
 .formulaire .label-form {
   color: #fdfdff;
