--- a/wp-content/themes/theme-the-boyzs/partials/_contact.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_contact.scss
@@ -48,3 +48,14 @@
     }
     
 }
+
+@media(min-width:1000px){
+    .formulaire {
+    
+        .label-form {
+            color: variables.$white;
+            margin-left: 10px;
+        }
+        
+    }
+}
