--- a/wp-content/themes/theme-the-boyzs/partials/_pagination.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_pagination.scss
@@ -2,6 +2,7 @@
 
 .container {
     background: variables.$ldlRed;
+    width: 80vw;
     padding: 25px;
     border-radius: 3px;
     display: grid;
