--- a/wp-content/themes/theme-the-boyzs/partials/_news.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_news.scss
@@ -58,7 +58,7 @@
         }
     }
 }
-
+/*
 .container {
     padding: 5px;
     display: grid;
@@ -71,7 +71,7 @@
     margin-bottom: 3rem;
 
     &__pagination {
-        display: flex;
+        display: grid;
         justify-content: center;
         list-style: none;
         padding: 0;
@@ -118,6 +118,7 @@
         }
     }
 }
+    */
 
 .container {
     padding: 5px;
