--- a/wp-content/themes/theme-the-boyzs/partials/_nav.scss
+++ b/wp-content/themes/theme-the-boyzs/partials/_nav.scss
@@ -228,6 +228,9 @@
 
     .navbar-top {
       justify-content: center;
+      .logo {
+        height: 20px;
+      }
     }
 
     .hamburger {
@@ -250,4 +253,6 @@
   .hamburger.open span:nth-child(3) {
     transform: rotate(-45deg) translate(3px, -8.5px);
   }
+
+
 }
